--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
   "require": {
     "altorouter/altorouter": "1.1.0",
-    "phpunit/phpunit": "4.6.*",
+    "phpunit/phpunit": ">=4.6",
     "phpunit/dbunit": ">=1.2"
+  },
+  
+  "autoload": {
+      "classmap": ["src/"]
   }
 }
